<resources>
    <string name="app_name">StoryApps</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Upload semua ceritamu hanya di sini</string>
    <string name="title_welcome_page">Selamat datang di StoryApps Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upload ceritamu?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Datang di StoryApps Dicoding.</string>
    <string name="logout">Keluar</string>
    <string name="description">Deskripsi</string>
    <string name="addstory">AddStory</string>
    <string name="maps">Maps</string>
    <string name="camera">Camera</string>
    <string name="galery">Galery</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location">Location</string>
</resources>

